{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 85,
  "lineage": "144a6a38-d2b2-9791-93ad-e01970502f16",
  "resources": [
    {
      "mode": "data",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034362069931:route-table/rtb-019f2d92a3ede5509",
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-0d98b209cc234e953",
                "route_table_id": "rtb-019f2d92a3ede5509",
                "subnet_id": "subnet-0da3f092bd4f881a6"
              },
              {
                "gateway_id": "",
                "main": true,
                "route_table_association_id": "rtbassoc-0467bd40d333aa12d",
                "route_table_id": "rtb-019f2d92a3ede5509",
                "subnet_id": ""
              }
            ],
            "filter": [
              {
                "name": "association.main",
                "values": [
                  "true"
                ]
              }
            ],
            "gateway_id": null,
            "id": "rtb-019f2d92a3ede5509",
            "owner_id": "034362069931",
            "region": "us-east-1",
            "route_table_id": "rtb-019f2d92a3ede5509",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-087e7615be2584268",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": null,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0dfbf011d01e2e948"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034362069931:vpc/vpc-0dfbf011d01e2e948",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0fa5e6764ef9d250c",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-09a401662e33771a8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dfbf011d01e2e948",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-019f2d92a3ede5509",
            "owner_id": "034362069931",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0d7405d05f836d0d4",
            "arn": "arn:aws:ec2:us-east-1:034362069931:instance/i-0c3fec43632dcdf38",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-ecr-pull-profile",
            "id": "i-0c3fec43632dcdf38",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "voting-app-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0154f2ea708879c57"
              }
            ],
            "primary_network_interface_id": "eni-0154f2ea708879c57",
            "private_dns": "ip-172-31-2-44.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.2.44",
            "public_dns": "ec2-34-226-155-175.compute-1.amazonaws.com",
            "public_ip": "34.226.155.175",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-082d537ef5b1101fa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "voting-app-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0da3f092bd4f881a6",
            "tags": {
              "Name": "voting-app-data",
              "Role": "data"
            },
            "tags_all": {
              "Name": "voting-app-data",
              "Role": "data"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-051a241916f0c88f2"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "034362069931",
            "id": "i-0c3fec43632dcdf38",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.voting_app",
            "aws_security_group.voting_app",
            "aws_subnet.main",
            "data.aws_ami.ubuntu",
            "data.aws_iam_instance_profile.ecr_pull",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0d7405d05f836d0d4",
            "arn": "arn:aws:ec2:us-east-1:034362069931:instance/i-0770b5503f08a4300",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-ecr-pull-profile",
            "id": "i-0770b5503f08a4300",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "voting-app-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c2e71e03c949253c"
              }
            ],
            "primary_network_interface_id": "eni-0c2e71e03c949253c",
            "private_dns": "ip-172-31-9-124.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.9.124",
            "public_dns": "ec2-52-207-73-96.compute-1.amazonaws.com",
            "public_ip": "52.207.73.96",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d0b7545e08868050",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "voting-app-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0da3f092bd4f881a6",
            "tags": {
              "Name": "voting-app-web",
              "Role": "web"
            },
            "tags_all": {
              "Name": "voting-app-web",
              "Role": "web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-051a241916f0c88f2"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "034362069931",
            "id": "i-0770b5503f08a4300",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.voting_app",
            "aws_security_group.voting_app",
            "aws_subnet.main",
            "data.aws_ami.ubuntu",
            "data.aws_iam_instance_profile.ecr_pull",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034362069931:internet-gateway/igw-087e7615be2584268",
            "id": "igw-087e7615be2584268",
            "owner_id": "034362069931",
            "region": "us-east-1",
            "tags": {
              "Name": "voting-app-igw"
            },
            "tags_all": {
              "Name": "voting-app-igw"
            },
            "vpc_id": "vpc-0dfbf011d01e2e948"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "034362069931",
            "id": "igw-087e7615be2584268",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d98b209cc234e953",
            "region": "us-east-1",
            "route_table_id": "rtb-019f2d92a3ede5509",
            "subnet_id": "subnet-0da3f092bd4f881a6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "034362069931",
            "id": "rtbassoc-0d98b209cc234e953",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_subnet.main",
            "data.aws_route_table.main",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "voting_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034362069931:security-group/sg-051a241916f0c88f2",
            "description": "Voting app security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-051a241916f0c88f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Result app",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Vote app",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "PostgreSQL internal",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "Redis internal",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "voting-app-sg",
            "name_prefix": "",
            "owner_id": "034362069931",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "voting-app-sg"
            },
            "tags_all": {
              "Name": "voting-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dfbf011d01e2e948"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "034362069931",
            "id": "sg-051a241916f0c88f2",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034362069931:subnet/subnet-0da3f092bd4f881a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da3f092bd4f881a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "034362069931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "voting-app-subnet"
            },
            "tags_all": {
              "Name": "voting-app-subnet"
            },
            "vpc_id": "vpc-0dfbf011d01e2e948"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "034362069931",
            "id": "subnet-0da3f092bd4f881a6",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}